--- a/main.html
+++ b/main.html
@@ -7,6 +7,22 @@
 </head>
 
 <body>
+
+	<form id="myform">
+		  <label for="firstName">First Name:</label>
+	<input type="text" id="firstName"><br>
+
+	<label for="lastName">Last Name:</label>
+	<input type="text" id="lastName"><br>
+
+	<label for="phoneNumber">Phone Number:</label>
+	<input type="number" id="phoneNumber"><br>
+
+	<label for="email">Email ID:</label>
+	<input type="email" id="email"><br>
+
+	<button type="submit" onclick="submitForm()">Submit</button> 
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
