--- a/main.html
+++ b/main.html
@@ -9,17 +9,17 @@
 <body>
 
 	<form id="myform">
-		  <label for="firstName">FirstName:</label>
-	<input type="text" id="firstName"><br>
+		  <label for="firstName">First Name:</label>
+	<input type="text" id="firstName" name="First Name"><br>
 
 	<label for="lastName">Last Name:</label>
-	<input type="text" id="lastName"><br>
+	<input type="text" id="lastName" name="Last Name"><br>
 
 	<label for="phoneNumber">Phone Number:</label>
-	<input type="number" id="phoneNumber"><br>
+	<input type="number" id="phoneNumber" name="Phone Number"><br>
 
 	<label for="email">Email ID:</label>
-	<input type="email" id="email"><br>
+	<input type="email" id="email" name="Email ID"><br>
 
 	<button type="submit" onclick="submitForm()">Submit</button> 
 	</form>
